--- a/pom.xml
+++ b/pom.xml
@@ -11,14 +11,14 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.0.0.RC1</version>
+        <version>1.0.0.RC3</version>
     </parent>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <jersey.version>2.5.1</jersey.version>
+        <jersey.version>2.6-SNAPSHOT</jersey.version>
     </properties>
 
     <dependencyManagement>
@@ -99,6 +99,12 @@
             <id>spring-snapshots</id>
             <name>Spring Milestones</name>
             <url>http://repo.spring.io/milestone</url>
+        </repository>
+        <repository>
+            <id>snapshot-repository.java.net</id>
+            <name>Java.net Snapshot Repository for Maven</name>
+            <url>https://maven.java.net/content/repositories/snapshots/</url>
+            <layout>default</layout>
         </repository>
     </repositories>
 
